policies/grafana-enforce-dashboard-folder/tests/base/binding.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: grafana-enforce-dashboard-folder-vap-library-test
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/grafana-enforce-dashboard-folder: deny
    objectSelector: {}
  policyName: grafana-enforce-dashboard-folder.vap-library.com
  validationActions:
  - Deny
