policies/grafana-enforce-dashboard-folder/tests/base/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
- namespace.yaml
- test.yaml
