policies/grafana-enforce-dashboard-folder/tests/base/test.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: grafana-enforce-dashboard-folder-vap-library-test
data:
  test: "test"
